# base

./: CMakeLists.txt  README.md  premake.lua
include/base/: handlealloc.h  spring.h
include/base/inline/: spring.inl
include/mapp/: allocator.h  app.hpp  bounds.h  bx.h  commandline.h  config.h  constants.h  cpu.h  debug.h  easing.h  endian.h  error.h  event.hpp  file.h  filepath.h  float4x4_t.h  handlealloc.h  hash.h  input.hpp  layer.hpp  macros.h  mapp.hpp  maputil.h  math.h  mpscqueue.h  mutex.h  os.h  pixelformat.h  platform.h  platform.hpp  process.h  readerwriter.h  ringbuffer.h  rng.h  semaphore.h  simd_t.h  sort.h  spscqueue.h  string.h  thread.h  (+5 more)
include/mapp/cocoa/: CocoaEventQueue.h  CocoaWindow.h  cocoa_window.hpp
include/mapp/common/: dialogs.hpp  dialogs_desc.hpp  event.hpp  event_queue.hpp  init.hpp  layers.hpp  main.hpp  state.hpp  window.hpp  window_desc.hpp
include/mapp/inline/: allocator.inl  bx.inl  cpu.inl  easing.inl  endian.inl  error.inl  float4x4_t.inl  handlealloc.inl  hash.inl  math.inl  mpscqueue.inl  mutex.inl  os.inl  pixelformat.inl  readerwriter.inl  ringbuffer.inl  rng.inl  simd128_langext.inl  simd128_neon.inl  simd128_ref.inl  simd128_sse.inl  simd128_swizzle.inl  simd256_avx.inl  simd256_ref.inl  simd_ni.inl  sort.inl  spscqueue.inl  string.inl  typetraits.inl  uint32_t.inl
include/mapp/platform-mac/: window_mac.hpp
include/mapp/platform-win/: window_win.hpp
include/mapp/uikit/: UIKitEventQueue.h  UIKitWindow.h
include/mapp/win32/: WIN32_event_queue.hpp  win32_input.hpp  win32_window.hpp
src/: allocator.cpp  bounds.cpp  bx.cpp  commandline.cpp  crtnone.cpp  debug.cpp  dtoa.cpp  easing.cpp  file.cpp  filepath.cpp  hash.cpp  math.cpp  mutex.cpp  os.cpp  process.cpp  semaphore.cpp  settings.cpp  sort.cpp  string.cpp  thread.cpp  timer.cpp  url.cpp
src/mapp/: app.cpp  event.cpp  input.cpp  layer.cpp  window.cpp
src/mapp/cocoa/: CocoaEventQueue.mm  CocoaWindow.mm  cocoa_window.cpp  cocoa_window.mm
src/mapp/common/: event.cpp  init.cpp
src/mapp/main/: WIN32_main.cpp  cocoa_main.mm  uikit_main.mm
src/mapp/platform-mac/: window_mac.cpp
src/mapp/platform-win/: window_win.cpp
src/mapp/uikit/: UIKitEventQueue.mm  UIKitWindow.mm
src/mapp/win32/: WIN32_dialogs.cpp  WIN32_event_queue.cpp  win32_input.cpp  win32_window.cpp
